@@ -58,7 +58,7 @@
             };<br/>
           </code>
           The ShapeType struct is the the data structure that is send from the
-          sender to the receiver through DDS.<br/>
+          sender to the receiver through DDS. In DDS this struct is called a sample.<br/>
           This file is also used as input for the RTI DDS generator. Since we're
           using RTI DDS in this example, the key of this struct is defined with
           <code>//@key</code> as shown above.
