@@ -10,7 +10,7 @@
     <tr>
       <td align="left"><a href="./04_dds4ccm.html">Previous<a></td>
       <td align="center"><img width="4%" height="5%" src="./images/images.png"/></td>
-      <td align="right"><a href="./06_compilation.html"><a></td>
+      <td align="right"><a href="./06_compilation.html">Next<a></td>
     </tr>
   </table>
   <hr />
@@ -22,7 +22,7 @@
     <tr>
       <td align="left"><a href="./04_dds4ccm.html">Previous<a></td>
       <td align="center"><img width="4%" height="5%" src="./images/images.png"/></td>
-      <td align="right"><a href="./06_compilation.html"><a></td>
+      <td align="right"><a href="./06_compilation.html">Next<a></td>
     </tr>
   </table>
 </body>
