@@ -1,3 +1,10 @@
+Fri Jun 18 07:21:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tutorials/Shapes/Tutorial/02_idl.html:
+        * connectors/dds4ccm/tutorials/Shapes/Tutorial/04_dds4ccm.html:
+        * connectors/dds4ccm/tutorials/Shapes/Tutorial/05_coding.html:
+          Update.
+
 Fri Jun 18 06:43:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tutorials/Shapes/Tutorial/01_general.html:
